[package]
name = "range-map-data-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde-xml-rs = "0.6.0"